@@ -11,3 +11,4 @@ test-reparent
 test-moniker
 test-selector
 
+test-filesel
