@@ -1,3 +1,9 @@
+2001-08-24  jacob berkman  <jacob@ximian.com>
+
+	* tests/test-filesel.c: test for bonobo-file-selector
+
+	* bonobo/bonobo-file-selector-util.[ch]: import libgnomefilesel
+
 2001-08-22  Michael Meeks  <michael@ximian.com>
 
 	* tests/test-ui.c (main): do a batch of 1000 sets for profiling.
